tests/fixtures/compile_fail/src/lib.rs
pub fn foo() {
    let x = y + 4;
}
